# haskell-workshop-2020

./: README.md  db-compose.yml  default.nix  hie.nix  hie.yaml  nixpkgs.nix  project.cabal  result  shell.nix  shell.sh
app/: Main.hs
db-migrations/: 1_0__users.sql
src/: Main.hs  PG.hs  Server.hs  User.hs
