Name:                hej-hej
Version:             0.1
Build-type:          Simple
Cabal-version:       >= 1.18
Description:         Hello
tested-with:         GHC == 8.6.5

executable hej-hej
  main-is:     	       Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base
