Name:                rest-api
Version:             0.1
Build-type:          Simple
Cabal-version:       >= 1.18
Description:         Rest API
tested-with:         GHC == 8.6.5

executable rest-api
  main-is:     	       Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base,
                       classy-prelude,
                       aeson,
                       scotty
  default-extensions:   OverloadedStrings
                      , DeriveGeneric

