Name:                rest-api
Version:             0.1
Build-type:          Simple
Cabal-version:       >= 1.18
Description:         Rest API
tested-with:         GHC == 8.6.5


library
  exposed-modules:     PG
                       Server
                       User                             

  default-language:    Haskell2010
  hs-source-dirs:      src
  
  default-extensions:   DeriveGeneric
                        OverloadedStrings           
                        QuasiQuotes             

  build-depends:       base,
                       classy-prelude,
                       aeson,
                       scotty,
                       postgresql-simple,
                       postgresql-simple-migration
  
  ghc-options: -Wall -fno-warn-orphans -Wredundant-constraints


executable rest-api
  main-is:     	       Main.hs
  default-language:    Haskell2010
  hs-source-dirs:      app
  build-depends:       base,
                       rest-api